--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -74,7 +74,7 @@ including:
   21 departments. Below are some graphs to help visualize the dataset
   key variables.
 
-![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-1.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-2.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-3.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-4.png)<!-- -->
+![](p8105_hw3_xl3214_files/figure-gfm/Q1-%20Some%20basic%20visualizations-1.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Q1-%20Some%20basic%20visualizations-2.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Q1-%20Some%20basic%20visualizations-3.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Q1-%20Some%20basic%20visualizations-4.png)<!-- -->
 
 1.  How many aisles are there, and which aisles are the most items
     ordered from?
@@ -86,7 +86,7 @@ including:
     limiting this to aisles with more than 10000 items ordered. Arrange
     aisles sensibly, and organize your plot so others can read it.
 
-![](p8105_hw3_xl3214_files/figure-gfm/Making%20the%20plot-1.png)<!-- -->
+![](p8105_hw3_xl3214_files/figure-gfm/Q1-%20Making%20the%20aisle%20plot-1.png)<!-- -->
 
 - There are 39 aisles with more than 10,000 items ordered.
 
@@ -157,22 +157,29 @@ data("brfss_smart2010")
 #organize responses as a factor taking levels ordered from “Poor” to “Excellent”
 brfss <- brfss_smart2010 |>
   janitor::clean_names() |> 
-  filter(topic == "Overall Health" | response %in% c("Excellent", "Very good", "Good", "Fair", "Poor")) |> 
+  filter(topic == "Overall Health" & response %in% c("Excellent", "Very good", "Good", "Fair", "Poor")) |> 
   mutate(response = factor(response, 
                            levels=c("Poor", "Fair", "Good", "Very good", "Excellent"), ordered=TRUE)) |>
   rename(resp_id = respid, location_abbr = locationabbr, location_desc = locationdesc)
 head(brfss)
-unique(brfss$topic)
-unique(brfss$response)
+unique(pull(brfss, topic))
+unique(pull(brfss, response))
 ```
 
-Using this dataset, do or answer the following (commenting on the
-results of each):
+The BRFSS dataset has 10625 observations and 23 variables. Variables
+include: year, location_abbr, location_desc, class, topic, question,
+response, sample_size, data_value, confidence_limit_low,
+confidence_limit_high, display_order, data_value_unit, data_value_type,
+data_value_footnote_symbol, data_value_footnote, data_source, class_id,
+topic_id, location_id, question_id, resp_id, geo_location.
 
 1.  In 2002, which states were observed at 7 or more locations? What
     about in 2010?
 
-- In 2002,
+- In 2002, MA, NJ, PA states were observed at 7 or more locations.
+
+- In 2010, CA, FL, MA, MD, NC, NE, NJ, NY, OH, TX, WA states were
+  observed at 7 or more locations.
 
 2.  Construct a dataset that is limited to Excellent responses, and
     contains, year, state, and a variable that averages the data_value
@@ -181,6 +188,51 @@ results of each):
     a line for each state across years – the geom_line geometry and
     group aesthetic will help).
 
+<!-- -->
+
+    ## # A tibble: 443 × 3
+    ## # Groups:   year, location_abbr [443]
+    ##     year location_abbr data_value_state_avg
+    ##    <int> <chr>                        <dbl>
+    ##  1  2010 AL                            18.4
+    ##  2  2010 AZ                            21.6
+    ##  3  2010 AR                            25.4
+    ##  4  2010 CA                            23.9
+    ##  5  2010 CO                            25.4
+    ##  6  2010 CT                            24.2
+    ##  7  2010 DE                            20.3
+    ##  8  2010 DC                            26.1
+    ##  9  2010 FL                            NA  
+    ## 10  2010 GA                            23.1
+    ## # ℹ 433 more rows
+
+![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Spaghetti%20Plot-1.png)<!-- -->
+
+- The average data values across locations within a state fluctuates
+  across years, but overall remains fairly stable. There is no
+  distinguishable trend in the average data values across years.
+
+- Among all data available, UT in 2002 has the highest average data
+  value, WV in 2005 has the lowest average data value.
+
 3.  Make a two-panel plot showing, for the years 2006, and 2010,
     distribution of data_value for responses (“Poor” to “Excellent”)
     among locations in NY State.
+
+![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Two-panel%20plot-1.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Two-panel%20plot-2.png)<!-- -->
+
+- Based on the plots, we can see that *Poor* responses correspond to the
+  lowest data values across all locations in NY State for both 2006 and
+  2010, and as the order of responses increases towards *Very good*, the
+  data values also increase. However, for responses of *Excellent*, we
+  see a decreased data value distribution compared to the previous
+  *Good* and *Very good*.
+
+- We can see that in 2006, responses *Good* and *Very good* have
+  comparable data value distributions, although the median for *Very
+  good* is slightly higher. When it comes to 2010, the data value for
+  responses *Very good* is apparently higher than that of *Good*.
+  Responses *Fair* and *Poor* in 2010 have wider spread compared to that
+  of 2006.
+
+## Question 3
