--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -13,6 +13,7 @@ library(p8105.datasets)
 data("instacart")
 head(instacart)
 summary(instacart)
+sum(is.na(instacart))
 ```
 
 The **instacart** dataset has 1384617 observations and 15 variables,
@@ -149,6 +150,7 @@ including:
 
 ``` r
 data("brfss_smart2010")
+sum(is.na(brfss_smart2010))
 ```
 
 ``` r
@@ -162,8 +164,10 @@ brfss <- brfss_smart2010 |>
                            levels=c("Poor", "Fair", "Good", "Very good", "Excellent"), ordered=TRUE)) |>
   rename(resp_id = respid, location_abbr = locationabbr, location_desc = locationdesc)
 head(brfss)
+sum(is.na(brfss))
 unique(pull(brfss, topic))
 unique(pull(brfss, response))
+nrow(!is.na(brfss))
 ```
 
 The BRFSS dataset has 10625 observations and 23 variables. Variables
@@ -206,6 +210,15 @@ topic_id, location_id, question_id, resp_id, geo_location.
     ## 10  2010 GA                            23.1
     ## # ℹ 433 more rows
 
+    ## # A tibble: 4 × 3
+    ## # Groups:   year, location_abbr [1]
+    ##    year location_abbr data_value_state_avg
+    ##   <int> <chr>                        <dbl>
+    ## 1    NA <NA>                            NA
+    ## 2    NA <NA>                            NA
+    ## 3    NA <NA>                            NA
+    ## 4    NA <NA>                            NA
+
 ![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Spaghetti%20Plot-1.png)<!-- -->
 
 - The average data values across locations within a state fluctuates
@@ -236,3 +249,44 @@ topic_id, location_id, question_id, resp_id, geo_location.
   of 2006.
 
 ## Question 3
+
+1.  Load, tidy, merge, and otherwise organize the data sets.
+
+Your final dataset should include all originally observed variables;
+exclude participants less than 21 years of age, and those with missing
+demographic data; and encode data with reasonable variable classes
+(i.e. not numeric, and using factors with the ordering of tables and
+plots in mind).
+
+``` r
+#Checking variable descriptions (first few rows)
+covar_desc <- read_csv(file = "./nhanes_covar.csv", col_names = FALSE)
+covar_desc <- covar_desc[1:4,]
+covar_desc
+
+covar <- read_csv(file = "./nhanes_covar.csv", skip = 4, col_names = TRUE) |> 
+  janitor::clean_names() |> 
+  mutate(sex = recode(sex, "1" = "male", "2" = "female")) |>
+  mutate(education = recode(education, "1" = "Less than high school", "2" = "High school equivalent", "3" = "More than high school")) |>
+  filter(age < 21)
+
+#Remove NAs
+covar <- na.omit(covar)
+```
+
+Produce a reader-friendly table for the number of men and women in each
+education category, and create a visualization of the age distributions
+for men and women in each education category. Comment on these items.
+
+Traditional analyses of accelerometer data focus on the total activity
+over the day. Using your tidied dataset, aggregate across minutes to
+create a total activity variable for each participant. Plot these total
+activities (y-axis) against age (x-axis); your plot should compare men
+to women and have separate panels for each education level. Include a
+trend line or a smooth to illustrate differences. Comment on your plot.
+
+Accelerometer data allows the inspection activity over the course of the
+day. Make a three-panel plot that shows the 24-hour activity time
+courses for each education level and use color to indicate sex. Describe
+in words any patterns or conclusions you can make based on this graph;
+including smooth trends may help identify differences.
