Question 3: Finished graphing and commenting based on the graphs.

--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -167,7 +167,6 @@ head(brfss)
 sum(is.na(brfss))
 unique(pull(brfss, topic))
 unique(pull(brfss, response))
-nrow(!is.na(brfss))
 ```
 
 The BRFSS dataset has 10625 observations and 23 variables. Variables
@@ -250,13 +249,12 @@ topic_id, location_id, question_id, resp_id, geo_location.
 
 ## Question 3
 
-1.  Load, tidy, merge, and otherwise organize the data sets.
-
-Your final dataset should include all originally observed variables;
-exclude participants less than 21 years of age, and those with missing
-demographic data; and encode data with reasonable variable classes
-(i.e. not numeric, and using factors with the ordering of tables and
-plots in mind).
+1.  Load, tidy, merge, and otherwise organize the data sets. Your final
+    dataset should include all originally observed variables; exclude
+    participants less than 21 years of age, and those with missing
+    demographic data; and encode data with reasonable variable classes
+    (i.e. not numeric, and using factors with the ordering of tables and
+    plots in mind).
 
 ``` r
 #Checking variable descriptions (first few rows)
@@ -268,25 +266,128 @@ covar <- read_csv(file = "./nhanes_covar.csv", skip = 4, col_names = TRUE) |>
   janitor::clean_names() |> 
   mutate(sex = recode(sex, "1" = "male", "2" = "female")) |>
   mutate(education = recode(education, "1" = "Less than high school", "2" = "High school equivalent", "3" = "More than high school")) |>
-  filter(age < 21)
+  mutate(education = factor(education, levels=c("Less than high school", "High school equivalent", "More than high school"), ordered=TRUE)) |>
+  filter(age >= 21) |>
+  na.omit()
 
-#Remove NAs
-covar <- na.omit(covar)
+head(covar)
+sum(is.na(covar))
 ```
 
-Produce a reader-friendly table for the number of men and women in each
-education category, and create a visualization of the age distributions
-for men and women in each education category. Comment on these items.
+``` r
+accel <- read_csv(file = "./nhanes_accel.csv") |>
+  janitor::clean_names()
+```
 
-Traditional analyses of accelerometer data focus on the total activity
-over the day. Using your tidied dataset, aggregate across minutes to
-create a total activity variable for each participant. Plot these total
-activities (y-axis) against age (x-axis); your plot should compare men
-to women and have separate panels for each education level. Include a
-trend line or a smooth to illustrate differences. Comment on your plot.
+``` r
+q3_merged <- left_join(covar, accel)
+q3_merged
+summary(q3_merged)
+```
 
-Accelerometer data allows the inspection activity over the course of the
-day. Make a three-panel plot that shows the 24-hour activity time
-courses for each education level and use color to indicate sex. Describe
-in words any patterns or conclusions you can make based on this graph;
-including smooth trends may help identify differences.
+- There are 228 participants in the study, and the merged dataset has
+  1445 variables, after excluding participants less than 21 years of age
+  and those with missing demographic data.
+
+2.  Produce a reader-friendly table for the number of men and women in
+    each education category, and create a visualization of the age
+    distributions for men and women in each education category. Comment
+    on these items.
+
+<!-- -->
+
+    ## `summarise()` has grouped output by 'education'. You can override using the
+    ## `.groups` argument.
+
+    ## # A tibble: 6 × 3
+    ## # Groups:   education [3]
+    ##   education              sex    n_obs
+    ##   <ord>                  <chr>  <int>
+    ## 1 Less than high school  female    28
+    ## 2 Less than high school  male      27
+    ## 3 High school equivalent female    23
+    ## 4 High school equivalent male      35
+    ## 5 More than high school  female    59
+    ## 6 More than high school  male      56
+
+![](p8105_hw3_xl3214_files/figure-gfm/Q3-%20sex%20in%20each%20education%20cat%20and%20age%20distribution-1.png)<!-- -->
+
+- Based on the table, for education levels of *Less than high school*
+  and *More than high school*, male and female have similar number of
+  participants. For *High school equivalent* education level, however,
+  there are much more males compared to females.
+
+- Age distribution for different education level is similar across
+  genders. Again, difference between genders is only apparent for *High
+  school equivalent* education level, where the minimum, maximum, and
+  mean age of female is higher than male.
+
+3.  Traditional analyses of accelerometer data focus on the total
+    activity over the day. Using your tidied dataset, aggregate across
+    minutes to create a total activity variable for each participant.
+    Plot these total activities (y-axis) against age (x-axis); your plot
+    should compare men to women and have separate panels for each
+    education level. Include a trend line or a smooth to illustrate
+    differences. Comment on your plot.
+
+<!-- -->
+
+    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
+
+![](p8105_hw3_xl3214_files/figure-gfm/Q3-%20calculate%20total%20mims%20and%20plot%20it%20against%20age-1.png)<!-- -->
+
+- Overall, total activity decreases as age increases, consistent across
+  all education levels and genders. This trend is most apparent among
+  those with less than high school education, and least apparent among
+  those with more than high school education.
+
+- For those with less than high school education, total activity
+  decreases as age proceed from 21 to 50, then increases as age proceed
+  from 50 to 60, then decreases again as age continues to increase.
+  Males have more increase from age 50 to 60 than female.
+
+- For those with high school equivalent education, total activity
+  increases as age proceed from 21 to 40, then decreases as age
+  continues to proceed. For females, total activity increases again from
+  age 60 to 70, then decreases again. For males, total activity plateaus
+  starting age 60.
+
+- For those with more than high school education, total activity
+  plateaus from age 21 to 40. For females, total activity increases
+  slightly as age proceed from 40 to 45, then decreases starting 50. For
+  males, total activity plateaus from 21 to 50, increases slightly from
+  50 to 60, then decreases starting 60.
+
+4.  Accelerometer data allows the inspection activity over the course of
+    the day. Make a three-panel plot that shows the 24-hour activity
+    time courses for each education level and use color to indicate sex.
+    Describe in words any patterns or conclusions you can make based on
+    this graph; including smooth trends may help identify differences.
+
+<!-- -->
+
+    ## `geom_smooth()` using method = 'gam' and formula = 'y ~ s(x, bs = "cs")'
+
+![](p8105_hw3_xl3214_files/figure-gfm/Q3-%2024-hour%20activity%20time%20courses%20for%20each%20education%20level%20and%20sex-1.png)<!-- -->
+
+- In a 24-hour time window, activity level first decreases in the early
+  morning (0 to 250 minutes or 0 to 4.1666667 hours of day), sharply
+  increases starting at 250 minutes or 4.1666667 hours of day, reaches
+  its peak 500 to 10200 minutes or 8.3333333 to 170 hours of day, and
+  sharply decreases starting at 10200 minutes or 170 hours of day. This
+  trend is observed across education levels and sex. Female has higher
+  activity level peak than males, across all education levels.
+
+- The activity peak for those with less than high school education is
+  highest for both genders compared to the other two education level
+  groups. This group decreases sharply after it reaches its peak
+  activity level, consistent across genders.
+
+- The activity peak for those with high school equivalent education is
+  the lowest for both genders compared to the other to education level
+  groups. After reaching to its peak, this group plateaus (slightly
+  decreases) from 500 to 10200 minutes or 8.3333333 to 170 hours of day,
+  then sharply decreases afterwards.
+
+- The activity peak for those with more than high school education
+  plateaus the longest, particularly for males.
