--- a/p8105_hw3_xl3214.Rmd
+++ b/p8105_hw3_xl3214.Rmd
@@ -212,7 +212,6 @@ head(brfss)
 sum(is.na(brfss))
 unique(pull(brfss, topic))
 unique(pull(brfss, response))
-nrow(!is.na(brfss))
 ```
 
 The BRFSS dataset has `r nrow(brfss)` observations and `r ncol(brfss)` variables. Variables include: `r colnames(brfss)`.
@@ -299,11 +298,9 @@ ggplot(brfss_q3, aes(x = response, y = data_value, color = location_desc)) +
 
 ## Question 3
 
-1. Load, tidy, merge, and otherwise organize the data sets. 
+1. Load, tidy, merge, and otherwise organize the data sets. Your final dataset should include all originally observed variables; exclude participants less than 21 years of age, and those with missing demographic data; and encode data with reasonable variable classes (i.e. not numeric, and using factors with the ordering of tables and plots in mind).
 
-Your final dataset should include all originally observed variables; exclude participants less than 21 years of age, and those with missing demographic data; and encode data with reasonable variable classes (i.e. not numeric, and using factors with the ordering of tables and plots in mind).
-
-```{r Q3: Read-in datasets and cleaning, message = FALSE, results = 'hide'}
+```{r Q3- Read-in demographic dataset and cleaning, message = FALSE, results = 'hide'}
 #Checking variable descriptions (first few rows)
 covar_desc <- read_csv(file = "./nhanes_covar.csv", col_names = FALSE)
 covar_desc <- covar_desc[1:4,]
@@ -313,19 +310,121 @@ covar <- read_csv(file = "./nhanes_covar.csv", skip = 4, col_names = TRUE) |>
   janitor::clean_names() |> 
   mutate(sex = recode(sex, "1" = "male", "2" = "female")) |>
   mutate(education = recode(education, "1" = "Less than high school", "2" = "High school equivalent", "3" = "More than high school")) |>
-  filter(age < 21)
+  mutate(education = factor(education, levels=c("Less than high school", "High school equivalent", "More than high school"), ordered=TRUE)) |>
+  filter(age >= 21) |>
+  na.omit()
 
-#Remove NAs
-covar <- na.omit(covar)
+head(covar)
+sum(is.na(covar))
 ```
 
-Produce a reader-friendly table for the number of men and women in each education category, and create a visualization of the age distributions for men and women in each education category. Comment on these items.
+```{r Q3- Read-in accelerometer dataset and cleaning, message = FALSE, results = 'hide'}
+accel <- read_csv(file = "./nhanes_accel.csv") |>
+  janitor::clean_names()
+```
 
-Traditional analyses of accelerometer data focus on the total activity over the day. Using your tidied dataset, aggregate across minutes to create a total activity variable for each participant. Plot these total activities (y-axis) against age (x-axis); your plot should compare men to women and have separate panels for each education level. Include a trend line or a smooth to illustrate differences. Comment on your plot.
+```{r Q3- Merge the two datasets to form a final dataset, message = FALSE, results = 'hide'}
+q3_merged <- left_join(covar, accel)
+q3_merged
+summary(q3_merged)
+```
 
-Accelerometer data allows the inspection activity over the course of the day. Make a three-panel plot that shows the 24-hour activity time courses for each education level and use color to indicate sex. Describe in words any patterns or conclusions you can make based on this graph; including smooth trends may help identify differences.
+  * There are `r nrow(q3_merged)` participants in the study, and the merged dataset has `r ncol(q3_merged)` variables, after excluding participants less than 21 years of age and those with missing demographic data. 
 
+2. Produce a reader-friendly table for the number of men and women in each education category, and create a visualization of the age distributions for men and women in each education category. Comment on these items.
 
+```{r Q3- sex in each education cat and age distribution, echo = FALSE}
+#Create table for the number of men and women in each education category
+sex_education_df <- q3_merged |>
+  group_by(education, sex) |> 
+  summarise(n_obs = n())
+sex_education_df
+
+#Create visualization of the age distributions for men and women in each education category
+ggplot(q3_merged, aes(x = age, y = education)) +
+  geom_boxplot(outlier.colour="black", outlier.shape=16,
+             outlier.size=2, notch=FALSE) +
+  facet_grid(. ~ sex) +
+  labs(
+    title = "Box Plot: Age Distribution in Each Education Level, by Gender",
+       y = "Education Level",
+       x = "Age"
+      ) + 
+  theme(
+    title = element_text(size=10),
+    axis.text.x = element_text(size=10), 
+    axis.text.y = element_text(size=10))
+```
+
+  * Based on the table, for education levels of *Less than high school* and *More than high school*, male and female have similar number of participants. For *High school equivalent* education level, however, there are much more males compared to females. 
+  
+  * Age distribution for different education level is similar across genders. Again, difference between genders is only apparent for *High school equivalent* education level, where the minimum, maximum, and mean age of female is higher than male.
+
+3. Traditional analyses of accelerometer data focus on the total activity over the day. Using your tidied dataset, aggregate across minutes to create a total activity variable for each participant. Plot these total activities (y-axis) against age (x-axis); your plot should compare men to women and have separate panels for each education level. Include a trend line or a smooth to illustrate differences. Comment on your plot.
+
+```{r Q3- calculate total mims and plot it against age, echo = FALSE}
+#aggregate across minutes to create total activity variable, "total_mims"
+analysis_total <- q3_merged |> select(min1:min1440)
+
+analysis_total <- q3_merged |> 
+  mutate(total_mims = rowSums(analysis_total, na.rm = TRUE)) |>
+  select(seqn, sex, age, education, total_mims)
+
+ggplot(analysis_total, aes(x = age, y = total_mims, color = sex)) +
+  geom_point(alpha = 0.5) +
+  geom_smooth(aes(group = sex), se = FALSE) +
+  facet_grid(. ~ education) +
+  labs(
+    title = "Total Activity Distribution by Age and Gender, Grouped by Education Level",
+       y = "Total Activity (MIMS)",
+       x = "Age"
+      ) + 
+  theme(
+    title = element_text(size=10),
+    axis.text.x = element_text(size=10), 
+    axis.text.y = element_text(size=10),
+    legend.position = "top")
+```
+
+  * Overall, total activity decreases as age increases, consistent across all education levels and genders. This trend is most apparent among those with less than high school education, and least apparent among those with more than high school education. 
+  
+  * For those with less than high school education, total activity decreases as age proceed from 21 to 50, then increases as age proceed from 50 to 60, then decreases again as age continues to increase. Males have more increase from age 50 to 60 than female.
+  
+  * For those with high school equivalent education, total activity increases as age proceed from 21 to 40, then decreases as age continues to proceed. For females, total activity increases again from age 60 to 70, then decreases again. For males, total activity plateaus starting age 60. 
+  
+  * For those with more than high school education, total activity plateaus from age 21 to 40. For females, total activity increases slightly as age proceed from 40 to 45, then decreases starting 50. For males, total activity plateaus from 21 to 50, increases slightly from 50 to 60, then decreases starting 60.
+
+4. Accelerometer data allows the inspection activity over the course of the day. Make a three-panel plot that shows the 24-hour activity time courses for each education level and use color to indicate sex. Describe in words any patterns or conclusions you can make based on this graph; including smooth trends may help identify differences.
+
+```{r Q3- 24-hour activity time courses for each education level and sex, echo = FALSE}
+#Prep dataset for plotting, i.e., change variables min1:min1440 to rows and change "min1" to 1
+analysis_time_course <- q3_merged |> 
+  pivot_longer(min1:min1440, names_to = "minute", values_to = "mims") |>
+  group_by(seqn) |>
+  mutate(minute = as.numeric(str_replace(minute, "min", "")))
+
+ggplot(analysis_time_course, aes(x = minute, y = mims, color = sex)) +
+  geom_smooth(aes(group = sex), se = FALSE) +
+  facet_grid(. ~ education) +
+  labs(
+    title = "24-Hour Activity Time Courses by Minute and Sex, Grouped by Education Level",
+       x = "Minute of Day",
+       y = "Activity per Minute (MIMS/min)"
+      ) + 
+  theme(
+    title = element_text(size=10),
+    axis.text.x = element_text(size=10), 
+    axis.text.y = element_text(size=10),
+    legend.position = "right")
+```
+
+  * In a 24-hour time window, activity level first decreases in the early morning (0 to 250 minutes or  0 to `r 250/60` hours of day), sharply increases starting at 250 minutes or `r 250/60` hours of day, reaches its peak 500 to 10200 minutes or `r 500/60` to `r 10200/60` hours of day, and sharply decreases starting at 10200 minutes or `r 10200/60` hours of day. This trend is observed across education levels and sex. Female has higher activity level peak than males, across all education levels. 
+  
+  * The activity peak for those with less than high school education is highest for both genders compared to the other two education level groups. This group decreases sharply after it reaches its peak activity level, consistent across genders.
+  
+  * The activity peak for those with high school equivalent education is the lowest for both genders compared to the other to education level groups. After reaching to its peak, this group plateaus (slightly decreases) from 500 to 10200 minutes or `r 500/60` to `r 10200/60` hours of day, then sharply decreases afterwards.
+  
+  * The activity peak for those with more than high school education plateaus the longest, particularly for males. 
 
 
 
