--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -163,18 +163,21 @@ brfss <- brfss_smart2010 |>
   mutate(response = factor(response, 
                            levels=c("Poor", "Fair", "Good", "Very good", "Excellent"), ordered=TRUE)) |>
   rename(resp_id = respid, location_abbr = locationabbr, location_desc = locationdesc)
+
 head(brfss)
 sum(is.na(brfss))
-unique(pull(brfss, topic))
-unique(pull(brfss, response))
 ```
 
-The BRFSS dataset has 10625 observations and 23 variables. Variables
-include: year, location_abbr, location_desc, class, topic, question,
-response, sample_size, data_value, confidence_limit_low,
-confidence_limit_high, display_order, data_value_unit, data_value_type,
-data_value_footnote_symbol, data_value_footnote, data_source, class_id,
-topic_id, location_id, question_id, resp_id, geo_location.
+After cleaning, the BRFSS dataset has 10625 observations and 23
+variables. Variables include: year, location_abbr, location_desc, class,
+topic, question, response, sample_size, data_value,
+confidence_limit_low, confidence_limit_high, display_order,
+data_value_unit, data_value_type, data_value_footnote_symbol,
+data_value_footnote, data_source, class_id, topic_id, location_id,
+question_id, resp_id, geo_location. The type of data value in this
+dataset is Crude Prevalence, and the unit of data value is %. The topic
+of focus is Overall Health, question is How is your general health?, and
+responses include Excellent, Very good, Good, Fair, Poor.
 
 1.  In 2002, which states were observed at 7 or more locations? What
     about in 2010?
@@ -183,6 +186,9 @@ topic_id, location_id, question_id, resp_id, geo_location.
 
 - In 2010, CA, FL, MA, MD, NC, NE, NJ, NY, OH, TX, WA states were
   observed at 7 or more locations.
+
+- From 2002 to 2010, there is a significant increase in the number of
+  states that have 7 or more observation locations.
 
 2.  Construct a dataset that is limited to Excellent responses, and
     contains, year, state, and a variable that averages the data_value
@@ -220,12 +226,12 @@ topic_id, location_id, question_id, resp_id, geo_location.
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Spaghetti%20Plot-1.png)<!-- -->
 
-- The average data values across locations within a state fluctuates
-  across years, but overall remains fairly stable. There is no
-  distinguishable trend in the average data values across years.
+- The average crude prevalence across locations within a state
+  fluctuates across years, but overall remains fairly stable. There is
+  no distinguishable trend in the average data values across years.
 
-- Among all data available, UT in 2002 has the highest average data
-  value, WV in 2005 has the lowest average data value.
+- Among all data available, UT in 2002 has the highest average crude
+  prevalence, WV in 2005 has the lowest average crude prevalence.
 
 3.  Make a two-panel plot showing, for the years 2006, and 2010,
     distribution of data_value for responses (“Poor” to “Excellent”)
@@ -234,18 +240,18 @@ topic_id, location_id, question_id, resp_id, geo_location.
 ![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Two-panel%20plot-1.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Q2-%20Two-panel%20plot-2.png)<!-- -->
 
 - Based on the plots, we can see that *Poor* responses correspond to the
-  lowest data values across all locations in NY State for both 2006 and
-  2010, and as the order of responses increases towards *Very good*, the
-  data values also increase. However, for responses of *Excellent*, we
-  see a decreased data value distribution compared to the previous
-  *Good* and *Very good*.
+  lowest crude prevalence across all locations in NY State for both 2006
+  and 2010, and as the order of responses increases towards *Very good*,
+  the crude prevalence also increases. However, for responses of
+  *Excellent*, we see a decreased crude prevalence distribution compared
+  to the previous *Good* and *Very good*.
 
 - We can see that in 2006, responses *Good* and *Very good* have
-  comparable data value distributions, although the median for *Very
-  good* is slightly higher. When it comes to 2010, the data value for
-  responses *Very good* is apparently higher than that of *Good*.
-  Responses *Fair* and *Poor* in 2010 have wider spread compared to that
-  of 2006.
+  comparable crude prevalence distributions, although the median for
+  *Very good* is slightly higher. When it comes to 2010, the crude
+  prevalence for responses *Very good* is apparently higher than that of
+  *Good*. Responses *Fair* and *Poor* in 2010 have wider spread compared
+  to that of 2006.
 
 ## Question 3
 
